# chainlink-data-bridge-poc

./: .gitignore  FEE-DATA-PROOF.json  README.md  test_call.sh
contracts/near/: Cargo.toml  build.sh  deploy.sh
contracts/near/src/: lib.rs
scripts/: index.js  package-lock.json  package.json
utils/: Cargo.toml
utils/src/: data_proof.rs  main.rs
